# grid-trading-skill

./: .gitignore  .npmignore  AGENTS.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  install.ps1  install.sh  package.json  pyproject.toml
grid_trading/: SKILL.md  __init__.py  cli.py
grid_trading/backtest/: metrics.py  simulator.py
grid_trading/core/: __init__.py  grid_builder.py  order_manager.py  pnl_calculator.py  position_tracker.py
grid_trading/report/: html_report.py
grid_trading/risk/: risk_checker.py
grid_trading/strategy/: grid_strategy.py  rebalance.py
grid_trading/tests/: mock_data.py  test_grid_builder.py  test_simulator.py
